--- a/index.html
+++ b/index.html
@@ -25,20 +25,157 @@
   <title>Prospero</title>
 </head>
 <body>
-  <header id="header">
+  <!-- --------- Header --------- -->
+  <header id="header" class="bg-dark">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
           <div class="left__content">
-            
+            <a href="mailto:info@yourdomain.com"><i class="fas fa-envelope"></i> &nbsp;info@prospero.uz</a>&nbsp;&nbsp;&nbsp;
+            <a href="tel:998998998998"><i class="fas fa-phone"></i>&nbsp; +998 99 899 8998</a>
           </div>
           <div class="right__content">
-            
+            <ul>
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+              <li><a href="#"><i class="fab fa-telegram"></i></a></li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
   </header>
+  <!-- --------- End Header --------- -->
+
+  <!-- --------- Carousel Section --------- -->
+  <section id="carousel__section">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner ">
+            <div class="carousel-item active ">
+              <img class="d-block w-100" src="lib/img/sliders/slider_1.jpg" alt="First slide">
+              <div class="row carousel-caption">
+                <div class="col-lg-6 align-text-top">
+                  <h3 data-wow-delay="0.8s">
+                    <span>Профессиональная разработка сайтов</span>
+                    ПРИДАЙ<br> АДАПТИВНОСТИ САЙТУ
+                  </h3>
+                  <div class="carousel__button" data-wow-delay="1.5s">
+                    <a href="#call_now" class="btn btn-danger pb-0" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+                  </div>
+                </div>
+                <div class="col-lg-6 carousel__img">
+                  <img src="lib/img/sliders/adaptive_1.png" width="600" alt="adaptive">
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img class="d-block w-100" src="lib/img/sliders/slider_2.jpg" alt="Second slide">
+              <div class="row carousel-caption">
+                <div class="col-lg-6 align-text-top">
+                  <h3 data-wow-delay="0.8s">
+                    <span>Маркетинговые и рекламные услуги</span>
+                    <br>WEB-САЙТ, PPC, SEO, SMM
+                  </h3>
+                  <div class="carousel__button" data-wow-delay="1.5s">
+                    <a href="#call_now" class="btn btn-danger dtable wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+                  </div>
+                </div>
+                <div class="col-lg-6 carousel__img">
+                  <img src="lib/img//sliders/adaptive_2.png" alt="adaptive">
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img class="d-block w-100" src="lib/img/sliders/slider_3.jpg" alt="Third slide">
+              <div class="row carousel-caption">
+                <div class="col-lg-6 align-text-top">
+                  <h3 data-wow-delay="0.8s">
+                    <span>Дизайнерские услуги</span>
+                    <br>WEB-САЙТ, PPC, SEO, SMM
+                  </h3>
+                  <div class="carousel__button" data-wow-delay="1.5s">
+                    <a href="#call_now" class="btn btn-danger dtable wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+                  </div>
+                </div>
+                <div class="col-lg-6 carousel__img">
+                  <img src="lib/img/sliders/adaptive_3.png" alt="adaptive">
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- --------- End Carousel Section --------- -->
+
+  <!-- ---------- Menu Bar --------- -->
+  <div class="menu-bar">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+      <a class="navbar-brand" href="#"><img src="lib/img/logo__1.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">О Нас <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Все Услуги
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Маркетинг и Аналитика</a>
+              <a class="dropdown-item" href="#">Разработка</a>
+              <a class="dropdown-item" href="#">Графический и Веб Дизайн</a>
+              <a class="dropdown-item" href="#">Поискавая Оптимизация </a>
+              <a class="dropdown-item" href="#">SMM Продвижение</a>
+              <a class="dropdown-item" href="#">Разработка Ботов</a>
+            </div>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Кейсы <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Бриф <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Контакты <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <!-- ---------- End Menu Bar --------- -->
+
+
   <script src="lib/js/jquery-slim.min.js"></script>
   <script src="http://code.jquery.com/jquery-2.2.4.js"></script>
   <script src="lib/js/popper.min.js"></script>
