--- a/index.html
+++ b/index.html
@@ -55,137 +55,262 @@
       <div class="row">
         <div class="col-lg-12">
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner ">
-            <div class="carousel-item active ">
-              <img class="d-block w-100" src="lib/img/sliders/slider_1.jpg" alt="First slide">
-              <div class="row carousel-caption">
-                <div class="col-lg-6 align-text-top">
-                  <h3 data-wow-delay="0.8s">
-                    <span>Профессиональная разработка сайтов</span>
-                    ПРИДАЙ<br> АДАПТИВНОСТИ САЙТУ
-                  </h3>
-                  <div class="carousel__button" data-wow-delay="1.5s">
-                    <a href="#call_now" class="btn btn-danger pb-0" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner ">
+              <div class="carousel-item active ">
+                <img class="d-block w-100" src="lib/img/sliders/slider_1.jpg" alt="First slide">
+                <div class="row carousel-caption">
+                  <div class="col-lg-6 align-text-top">
+                    <h3 data-wow-delay="0.8s">
+                      <span>Профессиональная разработка сайтов</span>
+                      ПРИДАЙ<br> АДАПТИВНОСТИ САЙТУ
+                    </h3>
+                    <div class="carousel__button" data-wow-delay="1.5s">
+                      <a href="#call_now" class="btn btn-danger pb-0" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 carousel__img">
+                    <img src="lib/img/sliders/adaptive_1.png" width="600" alt="adaptive">
                   </div>
                 </div>
-                <div class="col-lg-6 carousel__img">
-                  <img src="lib/img/sliders/adaptive_1.png" width="600" alt="adaptive">
-                </div>
               </div>
-            </div>
 
-            <div class="carousel-item">
-              <img class="d-block w-100" src="lib/img/sliders/slider_2.jpg" alt="Second slide">
-              <div class="row carousel-caption">
-                <div class="col-lg-6 align-text-top">
-                  <h3 data-wow-delay="0.8s">
-                    <span>Маркетинговые и рекламные услуги</span>
-                    <br>WEB-САЙТ, PPC, SEO, SMM
-                  </h3>
-                  <div class="carousel__button" data-wow-delay="1.5s">
-                    <a href="#call_now" class="btn btn-danger dtable wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="lib/img/sliders/slider_2.jpg" alt="Second slide">
+                <div class="row carousel-caption">
+                  <div class="col-lg-6 align-text-top">
+                    <h3 data-wow-delay="0.8s">
+                      <span>Маркетинговые и рекламные услуги</span>
+                      <br>WEB-САЙТ, PPC, SEO, SMM
+                    </h3>
+                    <div class="carousel__button" data-wow-delay="1.5s">
+                      <a href="#call_now" class="btn btn-danger dtable wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 carousel__img">
+                    <img src="lib/img//sliders/adaptive_2.png" alt="adaptive">
                   </div>
                 </div>
-                <div class="col-lg-6 carousel__img">
-                  <img src="lib/img//sliders/adaptive_2.png" alt="adaptive">
-                </div>
               </div>
-            </div>
 
-            <div class="carousel-item">
-              <img class="d-block w-100" src="lib/img/sliders/slider_3.jpg" alt="Third slide">
-              <div class="row carousel-caption">
-                <div class="col-lg-6 align-text-top">
-                  <h3 data-wow-delay="0.8s">
-                    <span>Дизайнерские услуги</span>
-                    <br>WEB-САЙТ, PPC, SEO, SMM
-                  </h3>
-                  <div class="carousel__button" data-wow-delay="1.5s">
-                    <a href="#call_now" class="btn btn-danger dtable wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="lib/img/sliders/slider_3.jpg" alt="Third slide">
+                <div class="row carousel-caption">
+                  <div class="col-lg-6 align-text-top">
+                    <h3 data-wow-delay="0.8s">
+                      <span>Дизайнерские услуги</span>
+                      <br>WEB-САЙТ, PPC, SEO, SMM
+                    </h3>
+                    <div class="carousel__button" data-wow-delay="1.5s">
+                      <a href="#call_now" class="btn btn-danger dtable wow pulse" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Закажи сайт</a>
+                    </div>
                   </div>
-                </div>
-                <div class="col-lg-6 carousel__img">
-                  <img src="lib/img/sliders/adaptive_3.png" alt="adaptive">
+                  <div class="col-lg-6 carousel__img">
+                    <img src="lib/img/sliders/adaptive_3.png" alt="adaptive">
+                  </div>
                 </div>
               </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- --------- End Carousel Section --------- -->
-
-  <!-- ---------- Menu Bar --------- -->
-  <div class="menu-bar">
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><img src="lib/img/logo__1.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">О Нас <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Все Услуги
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Маркетинг и Аналитика</a>
-              <a class="dropdown-item" href="#">Разработка</a>
-              <a class="dropdown-item" href="#">Графический и Веб Дизайн</a>
-              <a class="dropdown-item" href="#">Поискавая Оптимизация </a>
-              <a class="dropdown-item" href="#">SMM Продвижение</a>
-              <a class="dropdown-item" href="#">Разработка Ботов</a>
-            </div>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Кейсы <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Бриф <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Контакты <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
   </div>
+</section>
+<!-- --------- End Carousel Section --------- -->
 
-  <!-- ---------- End Menu Bar --------- -->
+<!-- ---------- Menu Bar --------- -->
+<div class="menu-bar">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img src="lib/img/logo__1.png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">О Нас <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Все Услуги
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Маркетинг и Аналитика</a>
+            <a class="dropdown-item" href="#">Разработка</a>
+            <a class="dropdown-item" href="#">Графический и Веб Дизайн</a>
+            <a class="dropdown-item" href="#">Поискавая Оптимизация </a>
+            <a class="dropdown-item" href="#">SMM Продвижение</a>
+            <a class="dropdown-item" href="#">Разработка Ботов</a>
+          </div>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Кейсы <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Бриф <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Контакты <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
 
+<!-- ---------- End Menu Bar --------- -->
 
-  <script src="lib/js/jquery-slim.min.js"></script>
-  <script src="http://code.jquery.com/jquery-2.2.4.js"></script>
-  <script src="lib/js/popper.min.js"></script>
-  <script src="lib/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.0/waypoints.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.0/shortcuts/sticky-elements/waypoints-sticky.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $('.menu-bar').waypoint('sticky');
-    });
-  </script>
+<!-- ---------- About Us --------- -->
+<section id="section__1">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 h1">
+        <div class="about__us">
+          <h1>
+            <b style="color: #ff0000;">О</b>компании
+          </h1>
+          <p>«Prospero» - это маркетинговая компания полного цикла, которая является незаменимой в современном мире высоких технологий, где информация и скорость превыше всего; где книги, журналы и газеты замещаются интернет ресурсами, а общение все больше проходит через социальные сети и мессенджеры. Поэтому в нашу команду мы набрали талантливых, опытных, идущих в ногу со временем специалистов, которые создадут для вас уникальную концепцию эффективного маркетингового плана, с учетом всех нюансов ведения бизнеса в Узбекистане и за рубежом. <br><br>
+            Компания «Prospero» профессионально подберет маркетинговую стратегию и план мероприятий по продвижения вашего бизнеса, чтобы добиться эффективного результата и вывести ваш бизнес на лидирующие позиции рынка с минимальными затратами. <br><br> Доверьте ответственный маркетинговый процесс нашей команде и о вашем бренде заговорят!</p>
+            <hr>
+          </div>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-lg-2">
+          <img src="lib/img/icon/svg/about/about-1.svg" alt="">
+          <h4 class="span"><span>10</span>&nbsp;лет опыта</h4>
+        </div>
+        <div class="col-lg-2">
+         <img src="lib/img/icon/svg/about/about-2.svg" alt="">
+         <h4 class="span"><span>100</span>&nbsp;проектов</h4>
+       </div>
+       <div class="col-lg-2">
+         <img src="lib/img/icon/svg/about/about-3.svg" alt="">
+         <h4 class="span"><span>100</span>&nbsp;клиентов</h4>
+       </div>
+       <div class="col-lg-2">
+         <img src="lib/img/icon/svg/about/about-4.svg" alt="">
+         <h4 class="span"><span>100</span>&nbsp;страниц кода</h4>
+       </div>
+       <div class="col-lg-2">
+         <img src="lib/img/icon/svg/about/about-5.svg" alt="">
+         <h4 class="span"><span>100</span>&nbsp;% продаж</h4>
+       </div>
+       <div class="col-lg-2"> <img src="lib/img/icon/svg/about/about-6.svg" alt="">
+        <h4 class="span"><span>1850к</span>&nbsp;человек</h4>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ---------- End About Us --------- -->
+<section id="howcanus">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 pb-5">
+        <div class="howcanus h1 text-center pt-5">
+          <h1>
+            <b style="color: #ff0000;">Что</b>мы делаем
+          </h1>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="container__image">
+          <img src="lib/img/icon/marketing.jpg" alt="Avatar" class="image">
+          <div class="overlay">
+            <h4>МАРКЕТИНГ</h4>
+            <p>Мы правильно определим для Вас целевой рынок, привлечем, сохраним и нарастим количество потребителей</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+       <div class="container__image">
+        <img src="lib/img/icon/design.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <h4>ДИЗАЙН</h4>
+          <p>Хорошо разработанный дизайн сумеет правильно позиционировать предлагаемые Вами товары и услуги</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="container__image">
+        <img src="lib/img/icon/web_dev.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <h4>ВЕБ РАЗРАБОТКА</h4>
+          <p>Мы правильно определим для Вас целевой рынок, привлечем, сохраним и нарастим количество потребителей</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="container__image">
+        <img src="lib/img/icon/smm.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <h4>SMM ПРОДВИЖЕНИЕ</h4>
+          <p>Построим SMM-стратегию для продвижения вашего бизнеса в социальных сетях, поможем вам сблизиться с Вашей аудиторией</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="container__image">
+        <img src="lib/img/icon/seo.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <h4>ПОИСКОВАЯ ОПТИМИЗАЦИЯ</h4>
+          <p>Эффективно повысим посещаемость Вашего сайта благодаря грамотной внутренней и внешней оптимизации в поисковых системах</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+       <div class="container__image">
+        <img src="lib/img/icon/bot.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+          <h4>БОТОСТРОЕНИЕ</h4>
+          <p>Создадим перспективные боты в мессенджерах, там, где сейчас находится значительная часть Вашей аудитории</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+<section id="section__2">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 h1">
+        <h1>
+            <b style="color: #ff0000;">Как</b>мы делаем
+          </h1>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="lib/js/jquery-slim.min.js"></script>
+<script src="http://code.jquery.com/jquery-2.2.4.js"></script>
+<script src="lib/js/popper.min.js"></script>
+<script src="lib/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.0/waypoints.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.0/shortcuts/sticky-elements/waypoints-sticky.js"></script>
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.menu-bar').waypoint('sticky');
+  });
+</script>
 </body>
 </html>
