--- a/index.html
+++ b/index.html
@@ -278,24 +278,137 @@
       </div>
     </div>
     <div class="col-lg-4">
-       <div class="container__image">
-        <img src="lib/img/icon/bot.jpg" alt="Avatar" class="image">
-        <div class="overlay">
-          <h4>БОТОСТРОЕНИЕ</h4>
-          <p>Создадим перспективные боты в мессенджерах, там, где сейчас находится значительная часть Вашей аудитории</p>
-        </div>
+     <div class="container__image">
+      <img src="lib/img/icon/bot.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <h4>БОТОСТРОЕНИЕ</h4>
+        <p>Создадим перспективные боты в мессенджерах, там, где сейчас находится значительная часть Вашей аудитории</p>
       </div>
     </div>
   </div>
+</div>
 </div>
 </section>
 <section id="section__2">
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 h1">
-        <h1>
-            <b style="color: #ff0000;">Как</b>мы делаем
-          </h1>
+        <h1 class="pb-5">
+          <b style="color: #ff0000;">Как</b>мы делаем
+        </h1>
+        <div class="section__2 htm__padding">
+          <div class="row p-5">
+            <div class="col-lg-4 wcl-4 howtomake">
+              <div class="item consulting">
+                <h3>
+                  <span>1</span>Консалтинг
+                </h3>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_1-1.svg" class="icon" alt="">Разработка интернет стратегии компании</p>
+                </a>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_1-2.svg" class="icon" alt="">анализ новых возможностей для бизнеса</p>
+                </a>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_1-3.svg" class="icon" alt="">анализ конкурентов</p>
+                </a>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_1-4.svg" class="icon" alt="">подбор эффективных коммуникационных инструментов</p>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 wcl-4 howtomake">
+              <div class="item production">
+                <h3><span>2</span>Производство</h3>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_2-1.svg" class="icon" alt="">Разработка интернет стратегии компании</p>
+                </a>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_2-2.svg" class="icon" alt="">анализ новых возможностей для бизнеса</p>
+                </a>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_2-3.svg" class="icon" alt="">анализ конкурентов</p>
+                </a>
+                <a href="#">
+                  <p><img src="lib/img/icon/svg/services/service_2-4.svg" class="icon" alt="">подбор эффективных коммуникационных инструментов</p>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 wcl-4 howtomake">
+             <div class="item promotion">
+              <h3><span>3</span>Продвижение</h3>
+              <a href="#">
+                <p><img src="lib/img/icon/svg/services/service_3-1.svg" class="icon" alt="">Разработка интернет стратегии компании</p>
+              </a>
+              <a href="#">
+                <p><img src="lib/img/icon/svg/services/service_3-2.svg" class="icon" alt="">анализ новых возможностей для бизнеса</p>
+              </a>
+              <a href="#">
+                <p><img src="lib/img/icon/svg/services/service_3-3.svg" class="icon" alt="">анализ конкурентов</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</section>
+<section id="section__3">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 h1">
+        <h1 class="pb-5">
+          <b style="color: #ff0000;">ЧТО</b> МЫ СДЕЛАЛИ
+        </h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 bg__left">
+        <img src="lib/img/ourwork/carousel-left-notebook-1.png" alt="">
+      </div>
+      <div class="col-lg-5">
+        <div class="right__text">
+          <h1><span>КОРПОРАТИВНЫЙ САЙТ</span>  ДЛЯ ЮРИДИЧЕСКОЙ ФИРМЫ LAW OFFICES OF FARRUKH NURIDINOV P.C.</h1>
+          <p>
+            В последнее время оптовые и торгово-производственные компании сталкиваются с проблемой неэффективности основной деятельности - продаж. Большинство участников рынка работают по схеме "менеджер - прайс-лист – телефон – почта – клиент". Такой подход зачастую приводит к разрывам в коммуникации между поставщиком и дилером, ставит компанию в зависимость от конкретных сотрудников, случайностей и человеческого фактора.
+            Итог нашей работы:
+            Экономия времени на обработку заказов Повышение качества обслуживания Упрощение работы менеджеров и покупателей Ускорение отгрузки товаров
+          </p>
+          <div class="d-flex justify-content-between text-justify">
+            <div class="b__1 p-2">
+              <h6>
+                <span>ЦЕЛЬ</span> ПРОЕКТА:
+              </h6>
+              <p>Представить новые услуги, увеличения клиентов</p>
+            </div>
+            <div class="b__2 p-2">
+              <h6>
+                  <span>СРОКИ </span>ИСПОЛНЕНИЯ:
+                </h6>
+                <p>02.2018 - 04.2018</p>
+            </div>
+            <div class="b__3 p-2">
+              <h6>
+                  <span>ОКАЗАННЫЕ </span>УСЛУГИ: 
+                </h6>
+                <p>Разработка логотипа;
+                  Разработка брендбука;
+                  Объектная фотосъемка объектов;
+                  Разработка сайта для B2C сегмента;
+                  SEO;SMM.
+                </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-1">
+        <ul>
+                <li><img src="lib/img/icon/svg/corp_site.svg" alt=""><span><br>ТИП САЙТА: <br></span> КОРПОРАТИВНЫЙ</li>
+                <li><img src="lib/img/icon/svg/b2b_icon.svg" alt=""><span><br>АУДИТОРИЯ:<br></span> B2C</li>
+                <li><img src="lib/img/icon/svg/yii2_icon.svg" alt=""><span><br>CMS</span> Wordpress</li>
+              </ul>
       </div>
     </div>
   </div>
